Tue Jul 28 11:44:05 GMT 2015  Olly Betts <olly@survex.com>

	* lib/survex.pot,src/,tests/: Warn if we see an undated compass reading
	  when 'declination auto' is active.  Cache the computed declination
	  as that saves 5-6% of the run time when processing CUCC's big dataset.

Tue Jul 28 11:43:27 GMT 2015  Olly Betts <olly@survex.com>

	* lib/ru.po: Add missing ellipses to translated message.

Tue Jul 28 10:33:37 GMT 2015  Olly Betts <olly@survex.com>

	* NEWS: Update.

Tue Jul 28 09:22:44 GMT 2015  Olly Betts <olly@survex.com>

	* src/export.cc: Set LC_NUMERIC to the C locale while exporting so that
	  "." is used for the decimal separator in KML and other textual formats.
	  Reported by Jan Schorn.

Mon Jul 27 22:13:54 GMT 2015  Olly Betts <olly@survex.com>

	* src/commands.c: Fix comment typo.

Mon Jul 27 22:13:33 GMT 2015  Olly Betts <olly@survex.com>

	* lib/zh_CN.po: Add missing ellipses to translated message.

Mon Jul 27 22:13:16 GMT 2015  Olly Betts <olly@survex.com>

	* doc/manual.sgml: Fix doc typo.

Mon Jul 27 22:11:09 GMT 2015  Olly Betts <olly@survex.com>

	* doc/TODO.htm,doc/manual.sgml,lib/survex.pot,src/cavern.h,
	  src/commands.c,src/datain.c: Add new *declination command with
	  support for setting the declination automatically based on the
	  survey date.

Mon Jul 27 20:48:21 GMT 2015  Olly Betts <olly@survex.com>

	* lib/,src/commands.c,tests/csbad.out,tests/csbad.svx: Report error
	  from PROJ when coordinate conversion fails as part of the actual
	  error rather than on a separate line.

Mon Jul 27 20:07:30 GMT 2015  Olly Betts <olly@survex.com>

	* src/thgeomag.c,src/thgeomag.h: Make thgeomag() return declination in
	  radians, since that's what we want and it's more consistent with it
	  taking lat and lon in radians.

Mon Jul 27 20:04:38 GMT 2015  Olly Betts <olly@survex.com>

	* src/cavern.h: Document what days1 and days2 members of meta_data
	  struct are.

Mon Jul 27 15:15:53 GMT 2015  Olly Betts <olly@survex.com>
